--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "linky",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node deploy-commands.js && node db.js && node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.28.2",
-  "dependencies": {
-    "discord.js": "^14.25.1",
-    "dotenv": "^17.3.1",
-    "lowdb": "^7.0.1"
-  }
+	"name": "linky",
+	"version": "1.0.0",
+	"description": "",
+	"type": "module",
+	"main": "index.js",
+	"scripts": {
+		"start": "node deploy-commands.js && node db.js && node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.28.2",
+	"dependencies": {
+		"@libsql/client": "^0.17.0",
+		"discord.js": "^14.25.1",
+		"dotenv": "^17.3.1",
+		"lowdb": "^7.0.1"
+	}
 }
