--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@libsql/client": "^0.17.0",
 		"discord.js": "^14.25.1",
 		"dotenv": "^17.3.1",
+		"node-cron": "^4.2.1",
 		"prettier": "^3.8.1"
 	}
 }
